# bilibili-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
bili_cli/: __init__.py  auth.py  cli.py  client.py  exceptions.py
bili_cli/commands/: account.py  common.py  user_search.py
tests/: test_cli.py  test_client.py
